fixed IE layout issues

--- a/intermine/webapp/main/resources/webapp/css/begin.css
+++ b/intermine/webapp/main/resources/webapp/css/begin.css
@@ -13,16 +13,20 @@ p.aspectLabel{
 	font-style: italic;
 	margin-left:70px;
 	margin-top:0px;
+	background:none;
 }
 p.aspectLabel a:link{
 	font-size:13px;
 	font-style: normal;
 }
-div#aspectsFront {margin-left:65%;width:400px;margin-top:15px;}
+div#aspectsFront {margin-left:65%;width:400px;margin-top:25px;_margin-top:15px;}
 div#aspectsFront h1 {
     margin:0px;
     color:#5C0075;
 	font-size:1.5em;
+}
+#aspectsFront p {
+	background:none;
 }
 div#aspectsFront ul {list-style: none;margin:0px;padding:0px;}
 div#aspectsFront ul li{
